# HSR_Nous

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: README.md  game_rules.md
docs/mechanics/: action_sequence.md  base_stats.md  break_system.md  buff_system.md  damage_formula.md  elation_system.md  energy_system.md  follow_up_attacks.md  skill_points.md  special_mechanics.md  taunt_system.md
src/hsr_nous/: __init__.py
src/hsr_nous/adapters/: README.md  __init__.py  character_adapter.py  encounter_adapter.py  skill_adapter.py
src/hsr_nous/agents/: README.md  __init__.py  builder.py  evaluator.py  explainer.py  planner.py  search.py
src/hsr_nous/api/: README.md  __init__.py  orchestrator.py
src/hsr_nous/pipeline/: README.md  __init__.py  loader.py  update.py
src/hsr_nous/raw_schema/: README.md  __init__.py  character.py  character_promotion.py  character_rank.py  character_skill.py  character_skill_tree.py  element.py  enemy.py  light_cone.py  light_cone_promotion.py  light_cone_rank.py  loader.py  path.py  property.py  relic.py  relic_affix.py
src/hsr_nous/sim/: README.md  __init__.py  engine.py  resolver.py  selectors.py  timeline.py
src/hsr_nous/sim_schema/: README.md  __init__.py  action.py  actor.py  encounter.py  modifiers.py  policy.py  validator.py
tests/: README.md  test_pipeline.py  test_raw_schema.py  test_sim_schema_action.py  test_sim_schema_actor.py  test_sim_schema_encounter.py  test_sim_schema_modifiers.py  test_sim_schema_policy.py  test_sim_schema_validator.py
